# asero

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cliff.toml  env_template  moodlebot_tree.yaml  pyproject.toml  router_example.yaml
.github/workflows/: test.yml
asero/: __init__.py  augment.py  config.py  embedding.py  eval.py  logger.py  main.py  router.py  tree.py  util.py  yaml_utils.py
tests/: __init__.py
tests/asero/: __init__.py  test_config.py  test_router.py
